--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   http: ^0.13.4
   flutter_spinkit: ^5.1.0
   auto_size_text: ^3.0.0
+  dartz: ^0.10.1
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
